@@ -247,6 +247,7 @@ Ian Turner                          vectro@pipeline.com
 Iida Yosiaki                        iida@gnu.org
 Ilya N. Golubev                     gin@mo.msk.ru
 Ingo Saitz                          ingo@debian.org
+Ivan Labath                         labath3@st.fmph.uniba.sk
 Ivo Timmermans                      ivo@debian.org
 James                               james@albion.glarp.com
 James Antill                        jmanti%essex.ac.uk@seralph21.essex.ac.uk
